@@ -8,6 +8,7 @@
   ],
   "depends": [
     "Text::Utils",
+    "YAMLish:ver<0.1.1>",
     "CSV::Parser:ver<0.1.3>",
     "File::Find"
   ],
