@@ -93,14 +93,14 @@ Date,Check,TransactionType,Description,Debit,Credit
 =end code
 
 On the other hand, Synovus Bank has the following header for its
-transactions CSV file.  The field names work fine after down-casing
-them:
+transactions CSV file and its field names can be used as they are::
 
 =begin code
 Date,Account,Description,Category,Check,Credit,Debit
 =end code
 
-In both cases the class attribute names are clear and objects created
+In both cases the derived class attribute names are clear,
+ and objects created
 from the CSV files should be good translations of the attribute values
 B<as strings>. However, the meaning of the columns may not be obvious,
 nor may the transactions be unique if the files are concatenated
@@ -115,7 +115,7 @@ one and increment by one for succeeding transactions
 =head2 Possible improvements
 
 =item
-In like manner to module C<App::Mi6>, add an INI file to the user's
+Add a YAML configuration file to the user's
 C<$*HOME> directory to be used for defining translations for CSV file
 header field names. Such translations could be modified by the user if
 the user wishes to improve the transformation.
@@ -141,7 +141,7 @@ Tom Browder <tbrowder@acm.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-© 2022-2023 Tom Browder
+© 2022-2024 Tom Browder
 
 This library is free software; you may redistribute it or modify it under the Artistic License 2.0.
 
